# AdventOfCode

./: LICENSE  README.md
2015/: README.md
2015/Day 01 - Not Quite Lisp/: Cargo.toml  README.md  input.txt
2015/Day 01 - Not Quite Lisp/src/: main.rs
2015/Day 02 -  I Was Told There Would Be No Math/: Cargo.toml  README.md
2015/Day 02 -  I Was Told There Would Be No Math/src/: main.rs
2015/Day 02 - I Was Told There Would Be No Math/src/: main.rs
2015/Day 03 - Perfectly Spherical Houses in a Vacuum/: Cargo.toml  README.md
2015/Day 03 - Perfectly Spherical Houses in a Vacuum/src/: main.rs
2015/Day 04 - The Ideal Stocking Stuffer/: Cargo.toml  README.md
2015/Day 04 - The Ideal Stocking Stuffer/src/: main.rs
2015/Day 05 - Doesn't He Have Intern-Elves For This?/: Cargo.toml  README.md
2015/Day 05 - Doesn't He Have Intern-Elves For This?/src/: main.rs
2015/Day 06 - Probably a Fire Hazard/: Cargo.toml  README.md
2015/Day 06 - Probably a Fire Hazard/src/: main.rs
2015/Day 07 - Some Assembly Required/: Cargo.toml  README.md
2015/Day 07 - Some Assembly Required/src/: main.rs
2015/Day 08 - Matchsticks/: Cargo.toml  README.md
2015/Day 08 - Matchsticks/src/: main.rs
2016/: README.md
2016/Day 01 - No Time for a Taxicab/: Cargo.toml  Problem.md  README.md
2016/Day 01 - No Time for a Taxicab/src/: main.rs
2016/Day 02 - Bathroom Security/: Cargo.toml  Problem.md  README.md
2016/Day 02 - Bathroom Security/src/: main.rs
2016/Day 03 - Squares With Three Sides/: Cargo.toml  Problem.md  README.md
2016/Day 03 - Squares With Three Sides/src/: main.rs
2016/Day 04 - Security Through Obscurity/: Cargo.toml  README.md
2016/Day 04 - Security Through Obscurity/src/: main.rs
2016/Day 05 - How About a Nice Game of Chess?/: Cargo.toml  README.md
2016/Day 05 - How About a Nice Game of Chess?/src/: main.rs
2016/Day 06 - Signals and Noise/: Cargo.toml  README.md
2016/Day 06 - Signals and Noise/src/: main.rs
2016/Day 07 - Internet Protocol Version 7/: Cargo.toml  README.md
2016/Day 07 - Internet Protocol Version 7/src/: main.rs
2016/Day 08 - Two-Factor Authentication/: Cargo.toml  README.md
2016/Day 08 - Two-Factor Authentication/src/: main.rs
2016/Day 09 - Explosives in Cyberspace/: Cargo.toml  README.md
2016/Day 09 - Explosives in Cyberspace/src/: main.rs
2016/Day 10 - Balance Bots/: Cargo.toml  README.md
2016/Day 10 - Balance Bots/src/: main.rs
2024/: .rustfmt.toml  Cargo.toml
2025/: .gitignore  Cargo.toml  clippy.toml
2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  lib.rs
