[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", default-features = false }

[lints.rust]
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
missing_docs = "deny"
unsafe_code = "deny"
unused = { level = "deny", priority = -1 }
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"
warnings = "deny"

[lints.rustdoc]
all = "deny"
missing_crate_level_docs = "deny"

[lints.clippy]
# Clippy lints groups
# cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# Clippy nursery subset
branches_sharing_code = "deny"
debug_assert_with_mut_call = "deny"
decimal_literal_representation = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
future_not_send = "deny"
imprecise_flops = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
iter_with_drain = "deny"
missing_const_for_fn = "deny"
needless_collect = "deny"
non_send_fields_in_send_ty = "deny"
nonstandard_macro_braces = "deny"
option_if_let_else = "deny"
or_fun_call = "deny"
path_buf_push_overwrite = "deny"
redundant_pub_crate = "deny"
significant_drop_in_scrutinee = "deny"
string_lit_as_bytes = "deny"
suboptimal_flops = "deny"
suspicious_operation_groupings = "deny"
trailing_empty_array = "deny"
trait_duplication_in_bounds = "deny"
transmute_undefined_repr = "deny"
trivial_regex = "deny"
type_repetition_in_bounds = "deny"
unused_peekable = "deny"
unused_rounding = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
# Clippy restriction subset
allow_attributes_without_reason = "deny"
as_underscore = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
dbg_macro = "deny"
default_union_representation = "deny"
empty_drop = "deny"
empty_structs_with_brackets = "deny"
exhaustive_enums = "deny"
exit = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
mixed_read_write_in_expression = "deny"
multiple_inherent_impl = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
panic = "deny"
print_stderr = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
str_to_string = "deny"
string_add = "deny"
string_slice = "deny"
todo = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unwrap_used = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
# Clippy exceptions
non_ascii_literal = "allow" # The 90’s called and wanted their charset back.
module_name_repetitions = "allow" # No repetition since I reexport the names.
print_stdout = "allow" # It's a CLI program.
